@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 9.20141010),
                libfile-basedir-perl,
                libfile-rsync-perl,
                libfile-slurp-perl,
+               libfile-slurper-perl,
                libfile-touch-perl,
                libfile-which-perl,
                libstring-expand-perl,
