@@ -10,7 +10,7 @@ my $t = Test::UBH->new;
 
 $t->setup_test_environment(".foobar");
 $t->write_configs('d f .foobar/fnord foobar-fnord');
-ok( write_file($t->HOME.'/.foobar/fnord', "Some contents\n"),
+ok( $t->write_file($t->HOME.'/.foobar/fnord', "Some contents\n"),
     'Create '.$t->HOME.'/.foobar/fnord with some contents');
 file_not_empty_ok($t->HOME.'/.foobar/fnord');
 
