@@ -29,9 +29,9 @@ dir_exists_ok( "$XSESSIOND", "Xsession.d directory has been created" );
 
 ok( copy( ($ENV{ADTTMP}?'/etc/X11/':'')."Xsession.d/$RPSCRIPT","$XSESSIOND/" ),
     "Install Xsession.d script" );
-ok( write_file("$BINDIR/unburden-home-dir", "#!/bin/sh\necho \$0 called\n"), "Create test script" );
+ok( $t->write_file("$BINDIR/unburden-home-dir", "#!/bin/sh\necho \$0 called\n"), "Create test script" );
 ok( chmod( 0755, "$BINDIR/unburden-home-dir" ), "Set executable bit on testscript" );
-ok( write_file($t->HOME.'/.'.$t->BASENAME,
+ok( $t->write_file($t->HOME.'/.'.$t->BASENAME,
                "FILELAYOUT=".$t->TARGET."/%s\nUNBURDEN_HOME=yes\nTARGETDIR=.\n"),
     "Configure Xsession.d script to run unburden-home-dir" );
 
@@ -43,7 +43,7 @@ $t->call_cmd("/bin/sh -c '. $XSESSIOND/$RPSCRIPT; echo \$XDG_CACHE_HOME'");
 $t->eq_or_diff_stderr('', "Xsession.d STDERR is empty");
 $t->eq_or_diff_stdout('./'.$t->TARGET."/cache\n", "XDG_CACHE_HOME is set");
 
-ok( write_file($t->HOME.'/.'.$t->BASENAME, "UNBURDEN_HOME=no\nTARGETDIR=.\n"), "Configure Xsession.d script to NOT run unburden-home-dir" );
+ok( $t->write_file($t->HOME.'/.'.$t->BASENAME, "UNBURDEN_HOME=no\nTARGETDIR=.\n"), "Configure Xsession.d script to NOT run unburden-home-dir" );
 
 $t->call_cmd("/bin/sh -c '. $XSESSIOND/$RPSCRIPT; echo \$XDG_CACHE_HOME'");
 $t->eq_or_diff_stderr('', "Xsession.d STDERR is empty");
